vlib/v/checker/tests/test_invalid_name.vv
module custom

fn test_result() {
	println('whatever')
}
